<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout  android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="edu.uw.tacoma.mmuppa.cssappmvc.InstructorActivity">

    <EditText
        android:id="@+id/instructor_name_edit_text"
        android:hint="@string/instructor_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_image" />
    <Spinner
        android:id="@+id/instructor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/instructor_email_edit_text"
        android:hint="@string/instructor_email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"/>

    <EditText
        android:id="@+id/instructor_phone_edit_text"
        android:hint="@string/instructor_phone_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/instructor_office_edit_text"
        android:hint="@string/instructor_office_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <EditText
        android:id="@+id/instructor_bio_edit_text"
        android:hint="@string/instructor_bio_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <Button
        android:id="@+id/instructor_add_button"
        android:text="@string/add_instructor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
    </ScrollView>
